build.gradle: Added initial distributions.